--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "fs-extra": "^11.2.0",
     "google-auth-library": "^9.6.1",
     "google-spreadsheet": "^4.1.1",
+    "ky": "^1.2.0",
     "node-telegram-bot-api": "^0.64.0"
   },
   "devDependencies": {
